[package]
name = "nilsmf-ase"
version = "0.1.0"
authors = ["nilsien2001@gmail.com"]
description = "This is the endpoints in the nilsmf-ase service"
license = "Apache 2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
env_logger = "0.11.3"
log = "0.4.21"
mongodb = "2.8.2"
rocket = { version = "0.5.0", features = ["json"] }
rocket-errors = "0.1.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = "1.37.0"
nilsmf-lib = { git = "https://github.com/Neelzee/nilsmf-lib", branch = "main" }
once_cell = "1.19.0"
time = "0.3.36"
