[package]
name = "nilsmf-ase"
version = "0.1.0"
edition = "2021"
authors = ["Neelzee"]

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
nilsmf-lib = { git = "https://github.com/Neelzee/nilsmf-lib" }
once_cell = "1.19.0"
rocket = { version = "0.5.0", features = ["json"] }
rocket-errors = "0.1.0"
serde = "1.0.199"
serde_json = "1.0.116"
time = "0.3.36"
tokio = "1.37.0"
utoipa = "4.2.0"
utoipa-rapidoc = { version = "3.0.0", features = ["rocket"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["rocket"] }
